# HEX_INTERN_PYTHON

./: .gitignore  README.md  pyproject.toml  requirements.txt
01_langchain_rag/: memory_chat.py  rag_chunking_strategies.py  self_correcting_rag.py
02_langgraph/: code_gen_agent.py  portfolio_state_graph.py  telecom_multi_agent.py
03_tools_and_agents/: resume_pipeline_groq.py  resume_pipeline_langsmith.py  sqlite_react_agent.py
04_crewai/: ai_trends_crew.py
docs/: Reference.md  notes.md
notebooks/: final_practice.ipynb  graph_tools.ipynb  hello_chat.ipynb  hello_pdf.ipynb  hello_rag.ipynb  hello_rag_web.ipynb  langchain_tools.ipynb  learn_langchain.ipynb  pdf_rag.ipynb  practice.ipynb  pydantic_practice.ipynb
